--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,13 @@ edition = "2021"
 egui = "0.19"
 eframe = "0.19"
 rand = "0.8"
+instant = {version = "0.1", features = ["wasm-bindgen"]}
+
+# native:
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tracing-subscriber = "0.3"
+
+# web:
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1.6"
+tracing-wasm = "0.2"
